media/css/website.css
/* Generic stuff */
html { background: #00262f; font-size: 70%; }
body { margin: 0; }
ol ol, ol ul, ul ul, ul ol { margin-bottom: 0; }
a img { border: 0; }

h1 small,
h2 small,
h3 small,
h4 small { font-weight: normal; font-size: 0.7em; }
h5 small,
h6 small { font-weight: normal; font-size: 0.8em; }

h1 { color: #245B35; margin: 0.4em 0 0.5em; }
h2 { color: #ED890E; margin: 0.4em 0 0.5em; }
h3 { color: #113C32; margin: 0.4em 0 0.5em; }
h4 { color: #113C32; margin: 0.4em 0 0.5em; }

.caps { text-transform: uppercase; font-size: 0.8em; font-weight: normal; }

.warning { text-transform: lowercase; font-variant: small-caps; font-weight: bold; color: #911; }

.addborder { border: 1px solid #EEEEEE; padding: 2px; }

.right { float: right; margin-left: 10px; }
.left { float: left; margin-right: 10px; }

/* Layout elements */
#header,
#content,
#footer { float: left; clear: both; width: 100%; }

#topline {
	background-color: #00262f;
	color: #F1F8DB;
	width: 100%;
	margin: 0px auto;
	padding:1px 0;
	overflow: hidden;
	height:25px;
	text-align:center;
}
	#topline ul#quicklinks {
		margin:0;
		padding:0;
		list-style-type:none;
		width:500px;
		margin:0 auto;
	}
		#topline ul#quicklinks li {
			float:left;
			margin:0;
			padding:6px 10px 6px 11px;
			background:transparent url('../img/topline-divider.png') center left no-repeat scroll;
		}
			#topline ul#quicklinks li a {
				padding:0;
				margin:0;
				float:left;
				color:#FFF;
				font-weight:bold;
				text-decoration: none;
				height:13px;
				font-size:13px; /* I know using px is bad form, but this is just so its consistent wherever its used, it also means this bar won't resize in old browsers, which is actually kinda nice */
			}
		/* Kohana logo in the top bar */
		#topline ul#quicklinks li.first {
			border-left:none;
			padding-top:7px;
			padding-bottom:5px;
			background:none;
		}
			#topline ul#quicklinks li.first a { width:59px; height:13px; background: transparent url('../img/kohana-small.png') top left no-repeat scroll; }
			#topline ul#quicklinks li.first.active a { background: transparent url('../img/kohana-small-active.png') top left no-repeat scroll; }
		
		#topline ul#quicklinks li.active a {
			color:#ED900E;
		}
			
			#topline ul#quicklinks li a:hover {
				color:#ED900E;
			}
		
.container {
	width:950px;
	margin:0px auto;
	position:relative;
}
.cleaner {
	clear:both;
	visibility:hidden;
	margin:0;
	padding:0;
	border:0;
	height:0;
}

#header {
	padding:0px 0px;
	background:#77c244 url(../img/header.png) center top repeat-x;
}
	#header .container {
		padding:20px 0px 15px;
	}
	#logo {
		margin:0px 20px;
		padding:0px 8px;
	}
		
	#menu {
		position:absolute;
		bottom:0px;
		right:10px;
		padding:0;
		margin:0;
	}
		#menu ul {
			list-style-type:none;
			float:left;
			margin:0;
			padding:0;
		}
			#menu ul li {
				float:left;
				margin:0;
				padding:0;
				background:#83C018 url(../img/overlay2.png) repeat-x;
				border:1px solid #76B714;
				border-right:none;
				border-bottom:none;
			}
				#menu ul li a, #menu ul li a:visited {
					display:block;
					padding:10px 20px;
					margin:0;
					text-decoration:none;
					color:#3F5C0B;
					text-shadow:0.1em 0.1em 1px #76B714;
					text-transform:uppercase;
					font-size:12px;
					font-weight:bold;
					line-height:1em;
				}
			#menu ul li:hover {
				background: #76B714 url(../img/overlay2.png) repeat-x;
			}
				#menu ul li:hover a {
					color: #2C360B;
				}
			#menu ul li.selected {
				background:#FCFDF7;
				border-color:#76B714;
			}
				#menu ul li.selected a {
					color:#EE9323;
					text-shadow:none;
				}
			#menu ul li.first {
				-moz-border-radius: 6px 0px 0px 0px;
				border-radius: 6px 0px 0px 0px;
			}
			#menu ul li.last {
				border-right:1px solid #76B714;
				-moz-border-radius:0px 6px 0px 0px;
				border-radius: 0px 6px 0px 0px;
			}
		
	#languages {
		position:absolute;
		top:0px;
		right:30px;
		background:#65A826 url(../img/overlay2.png) repeat-x;
		border:1px solid #76B714;
		padding:2px 6px 4px;
		margin:0;
		border-top:none;
		border-radius: 0 0 8px 8px;
		-moz-border-radius: 0 0 8px 8px;
		-webkit-border-radius: 0 0 8px 8px;
		-opera-border-radius: 0 0 8px 8px;
		-khtml-border-radius: 0 0 8px 8px;
	}
		#languages ul {
			list-style-type:none;
			margin:0;
			padding:0;
		}
			#languages ul li {
				float:left;
				margin:0;
				padding:0;
			}
				#languages ul li a {
					padding:1px 4px;
				}
				#languages ul li.active a {
					background:#A3F224;
				}
#content { background: #f1f8db url(../img/content.png) center top repeat-x; }
	#content .wrapper { padding-top: 1em; background: transparent url(../img/wrapper.png) center top no-repeat; }
	#content .container { background-color: #FCFDF7; min-height: 350px; }
	#content hr { margin: 1em 0 1em; background-color: #F1F8DB; }
	#content dl.inactive-team { font-size: 0.9em; }
	#content p.intro {
		padding: 1em 20px;
		padding-left: 20px;
		margin: 0 -20px;
		font-size: 1.2em;
	}
	#content a { color: #004352; }
	#content a:hover { color: #00758f; }
	#content a:active { text-decoration: none; }
	

#footer {
	padding: 1em 0;
	background: #00262f;
	color: #eee;
	text-shadow: #00262f 0.1em 0.1em 1px;
	font-size: 0.9em;
}
	#footer a {
		color: #809397;
	}
	#footer .copyright {
		color: #405c63;
	}
		#footer .copyright a {
			color: #405c63;
			text-decoration: underline;
		}
		#footer .copyright a.logo {
			display: block;
			width: 100px;
			height: 24px;
			background: transparent url(../img/kohana_dark.png) 0 0 no-repeat;
			text-indent: -3000em;
		}
	#footer .feed h6 {
		margin-left: -14px;
		padding-left: 14px;
		letter-spacing: 0.11em;
		background: transparent url(../img/feed.png) left center no-repeat;
	}
	#footer .feed ol {
		margin: 0;
		padding: 0;
		list-style: none;
	}
		#footer .feed li {
			margin: 0;
			padding: 0;
		}

/* Various site wide styles */
#content .center {
	text-align:center;
}
#content .tan-box {
	border:1px solid #DBE5BC;
	background-color: #F1F8DB;
	padding: 8px 16px 8px;
	border-radius: 8px;
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	-opera-border-radius: 8px;
	-khtml-border-radius: 8px;
}
#content .green-box {
	background: #C1F788;
	border:1px solid #B0DB7D;
	padding: 8px 16px;
	border-radius:8px;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	-opera-border-radius:8px;
	-khtml-border-radius:8px;
}

#content a.button {
	padding:.6em 1em;
	margin:3em auto;
	text-decoration:none;
	color:#3F5C0B;
	text-shadow:0.1em 0.1em 1px #76B714;
	font-weight:bold;
	background:#83C018 url(../img/overlay2.png) repeat-x;
	border:1px solid #76B714;
	border-radius: 8px;
	line-height:2.4em;
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	-opera-border-radius: 8px;
	-khtml-border-radius: 8px;
}
	#content a.button:hover {
		background-color:#76B714;
		color: #2C360B;
	}

#content a.download-button {
	color: #F78900;
	font-size: 1.2em;
	line-height: 0;
	background:url(../img/download_button.png) no-repeat 0px 0px;
	display: block;
	width: 100px;
	height: 13px;
	padding: 32px 20px 0px 45px;
	text-decoration: none;
}
	#content a.download-button:hover {
		background:url(../img/download_button.png) no-repeat 0px -45px;
	}

#content .version {
	width:415px;
	float:left;
	margin-bottom:20px;
}
	#content .version.first {
		margin-right:40px;
	}
	
/* Homepage specific elements */
#content .built img { border: solid 1px #10382f; }
#content .showcase div { height: 130px; overflow: hidden; }
#content .showcase h4 { border-bottom: 1px solid #F1F8DB; background: transparent url(../img/icons/check.png) no-repeat scroll 0 0; line-height: 16px; padding-left:20px; }
	
#pages {
	background:#F1F8DB;
	float:right;
	width: 269px;
	height:226px;
	border:1px solid #DBE5BC;
	border-left:none;
	padding:0;
	margin: 0;
	border-radius: 0 8px 8px 0;
	-moz-border-radius: 0 8px 8px 0;
	-webkit-border-radius: 0 8px 8px 0;
	-opera-border-radius: 0 8px 8px 0;
	-khtml-border-radius: 0 8px 8px 0;
}
	#pages li {
		height: 24px;
		list-style: none;
		padding: 7px 0 7px 8px;
		margin: 0 -1px 0 0;
		border-left:1px solid #B0DB7D;
		border-radius: 0 8px 8px 0;
		-moz-border-radius: 0 8px 8px 0;
		-webkit-border-radius: 0 8px 8px 0;
		-opera-border-radius: 0 8px 8px 0;
		-khtml-border-radius: 0 8px 8px 0;
	}
		#pages li h3 {
			height: 22px;
			padding:2px 0 0;
			margin: 0;
			font-size: 1.2em;
			background: transparent url(../img/icons/check.png) no-repeat scroll 0 0;
			padding-left: 30px;
		}
			#pages li h3 a {
				color: #F29F3A;
				text-decoration: none;
			}
				#pages li h3 a:hover {
					color:#ED890E;
				}
	#pages li.active {
		background: #C1F788;
		border:1px solid #B0DB7D;
		border-left:none;
		padding: 6px 0 6px 9px;
	}
		#pages li.active h3 {
			background:transparent url(../img/icons/check_active.png) no-repeat scroll 0 0;
			font-size:1.2em;
			text-decoration: underline;
		}
			#pages li.active h3,
			#pages li.active h3 a {
				color: #113C32;
			}
	#pages li.first {
		position:relative;
		top:-1px;
		margin-bottom:-1px;
	}
	
ul#slides {
	background:#C1F788;
	float:left;
	width: 599px;
	height:226px;
	padding:0;
	margin:0;
	list-style-type:none;
	border:1px solid #B0DB7D;
	border-right:none;
	border-radius: 8px 0 0 8px;
	-moz-border-radius: 8px 0 0 8px;
	-webkit-border-radius: 8px 0 0 8px;
	-opera-border-radius: 8px 0 0 8px;
	-khtml-border-radius: 8px 0 0 8px;
}
	#slides li {
		padding: 10px;
		margin:0;
		display: none;
		width:580px;
	}
	#slides li.active {
		display:block;
	}
	#slides li h4 { margin-top:0;}
	#slides li img { background:#FFF; margin-right:10px; }

#content .downloads {}
	#content .downloads .download-2x {
		width:240px;
		padding-right:16px;
		float:left;
		border-right: 1px solid rgba(255,124,0,0.4);
	}
	#content .downloads .download-3x {
		width:240px;
		padding-left:16px;
		float:left;
	}
	#content .downloads h4 {
		margin: 0 30px;
	}
	#content .downloads ul {
		list-style: none;
		margin: 0 30px;
		padding: 0pt;
	}
		#content .downloads ul li {
			margin:0;
			padding:0
		}
	#content .downloads .download-button {
		margin: 6px 28px;
	}

#testimonials { padding-top:40px; padding-left:40px; }
	#testimonials div#testimonial { background: url('../img/quote.png') top left no-repeat scroll; padding-left:25px; font-size: 18px; }
		#testimonials div#testimonial div.who { font-size: 14px; }
			#testimonials #testimonial div.who a { color:#999999; }

#content .news {}
	#content .news ul { list-style: none; margin: 0pt; padding: 0pt; }
	#content .news #rss_feed { background: transparent url(../img/icons/rss_feed.png) center left no-repeat; padding-left: 20px; }
	#content .news #email_sub { background: transparent url(../img/icons/email.png) center left no-repeat; padding-left: 20px; }
	#content .news #follow_twitter { background: transparent url(../img/icons/twitter.png) center left no-repeat; padding-left: 20px; }
	
/* Download Page */
#download {}
	#download #starting_download {
		margin: 10px;
		border-radius: 8px;
		-moz-border-radius: 8px;
		-webkit-border-radius: 8px;
		-opera-border-radius: 8px;
		-khtml-border-radius: 8px;
		background-color: #FFE79F;
		padding: 8px;
		font-size: 1.2em;
	}
	#download .version p {margin-bottom: .6em; }
	#download .release { margin-bottom:20px; text-align:center; }
		#download .release p.title {
			font-size:1.1em;
			font-weight:bold;
			color:#245B35;
		}
		#download .release h2 {
			font-size:1.7em;
			color:#245B35;
			text-align:center;
			margin:0.6em 0;
		}
		#download .release .download-button { margin:6px auto; }
	#download .development { margin-bottom:20px; }
		#download .development h2 {
			border-bottom: 1px solid rgba(255,124,0,0.4);
			font-size: 1.1em;
			color:#ED890E;
		}
	#download .archive {}
		#download .archive h2 {
			border-bottom: 1px solid rgba(83,83,83,0.4);
			color: #666666;
			font-size: 1.1em;
			}

